erDiagram
    %% Enumerations:
    %% - tournaments.source: MTGO | MELEE | OTHER
    %% - deck_cards.board: MAIN | SIDE
    %% - matches.result: WIN | LOSS | DRAW
    %% - meta_changes.change_type: BAN | SET_RELEASE

    formats {
        uuid id PK
        citext name
    }

    meta_changes {
        uuid id PK
        uuid format_id FK 
        timestamptz date 
        text change_type 
        text description
        text set_code
    }

    players {
        uuid id PK
        text handle 
        citext normalized_handle 
    }

    cards {
        uuid id PK
        citext name 
        uuid scryfall_oracle_id
    }

    archetypes {
        uuid id PK
        uuid format_id FK
        citext name 
        text color
        %% UNIQUE (format_id, name)
    }

    tournaments {
        uuid id PK
        text name 
        timestamptz date 
        uuid format_id FK 
        text source 
        text link
    }

    tournament_entries {
        uuid id PK
        uuid tournament_id FK 
        uuid player_id FK 
        uuid archetype_id FK 
        int wins 
        int losses 
        int draws 
        int rank
        text decklist_url
        %% UNIQUE (tournament_id, player_id)
    }

    deck_cards {
        uuid id PK
        uuid entry_id FK 
        uuid card_id FK 
        int count 
        text board 
        %% board: MAIN | SIDE
        %% UNIQUE (entry_id, card_id, board)
    }

    matches {
        uuid id PK
        uuid entry_id FK 
        uuid opponent_entry_id FK 
        text result 
        boolean mirror 
        uuid pair_id
        %% result: WIN | LOSS | DRAW (from entry_id's perspective)
        %% pair_id: UUID shared by both rows of a real pairing
        %% To avoid double-counting in queries, aggregate by pair_id or filter to entry_id < opponent_entry_id
    }

    %% Relationships
    formats ||--o{ tournaments : "format_id"
    formats ||--o{ meta_changes : "format_id"
    formats ||--o{ archetypes : "format_id"
    tournaments ||--o{ tournament_entries : "tournament_id"
    players ||--o{ tournament_entries : "player_id"
    archetypes ||--o{ tournament_entries : "archetype_id"
    tournament_entries ||--o{ deck_cards : "entry_id"
    cards ||--o{ deck_cards : "card_id"
    tournament_entries ||--o{ matches : "entry_id"
    tournament_entries ||--o{ matches : "opponent_entry_id"
